--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches:
-      - master  # 这里的意思是当 main分支发生push的时候，运行下面的jobs，这里先改为github-actions
+      - master  # 这里的意思是当分支发生push的时候，运行下面的jobs
+  pull_request:
+    branches: 
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
