--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ defaultContentLanguageInSubdir = false
   # (Optional, default docs) Specify root page to render child pages as menu.
   # Page is resoled by .GetPage function: https://gohugo.io/functions/getpage/
   # For backward compatibility you can set "*" to render all sections to menu. Acts same as "/"
-  BookSection = "wiki"
+  BookSection = "*"
 
   # Set source repository location.
   # Used for "Last Modified" and "Edit this page" links.
