--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ defaultContentLanguageInSubdir = false
   # Enable "Edit this page" links for "doc" page type.
   # Disabled by default. Uncomment to enable. Requires "BookRepo" param.
   # Edit path must point to root directory of repo.
-  BookEditPath = "edit/master"
+  BookEditPath = "blob/master"
 
   # Configure the date format used on the pages
   # - In git information
